@startuml
'https://plantuml.com/class-diagram

abstract class Game
class EasyGame
class MediumGame
class HardGame

Game <|-- EasyGame
Game <|-- MediumGame
Game <|-- HardGame


abstract class Game {
+ action():void
# timeCountAndNewCycleJudge():boolean
# shootAction():void
# bulletsMoveAction():void
# aircraftsMoveAction():void
# propsMoveAction():void
# crashCheckAction():void
# bombEmpty(AbstractProp abstractProp):void
# createBoss():boolean
# difficultyIncrease():void
# difficultyIncreaseEverytime():void
# postProcessAction():void
+ createEnemies():void
+ paint(Graphics g):void
+paintImageWithPositionRevised(Graphics g, List<? extends AbstractFlyingObject> objects):void
+paintScoreAndLife(Graphics g):void
}

class EasyGame{
+createEnemies():void
}
class MediumGame{
#timeCountAndNewCycleJudge():boolean
+createEnemies():void
}
class HardGame{
#timeCountAndNewCycleJudge():boolean
+createEnemies():void
}

@enduml